# clean-architecture-master-template

./: .env.development  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  package.json  pyproject.toml  pytest.ini
.husky/: pre-commit
alembic/: env.py
alembic/versions/: 2026_01_05_1420-c111e6d13adc_thiep_test.py
docs/api/: README.md
docs/development/: README.md
scripts/: generate_docs.py  generate_types.py  migrate.py  seed.py
src/: main.py
src/bootstrapper/: __init__.py  app_factory.py  endpoints.py  exception_handlers.py  lifespan.py  middleware.py  module_loader.py
src/bootstrapper/containers/: __init__.py  application_container.py  infrastructure_container.py
src/bootstrapper/registrations/: __init__.py
src/config/: __init__.py  api.py  base.py  cors.py  env_loader.py  security.py
src/config/buses/: __init__.py  buses.py  in_memory.py
src/config/cache/: __init__.py  cache.py  in_memory.py  redis.py
src/config/database/: __init__.py  database.py  postgres.py
src/config/events/: __init__.py  events.py  in_memory.py
src/config/jobs/: __init__.py  in_memory.py  jobs.py  redis_celery.py
src/config/logging/: __init__.py  logging.py  standard.py
src/config/notification/: __init__.py  in_memory.py  notification.py  novu.py
src/config/storage/: __init__.py  local.py  s3.py  storage.py
src/config/types/: __init__.py  api.py  base.py  buses.py  cache.py  cors.py  database.py  events.py  jobs.py  logging.py  notification.py  security.py  storage.py
src/contexts/: __init__.py
src/contexts/file_management/: __init__.py  composition.py
src/contexts/user_management/: __init__.py  composition.py
src/infrastructure/: __init__.py
src/infrastructure/buses/: __init__.py  buses_module.py  factory.py
src/infrastructure/cache/: __init__.py  cache_module.py  factory.py
src/infrastructure/config/: __init__.py  config_module.py  config_service.py
src/infrastructure/database/: __init__.py  database_module.py  factory.py
src/infrastructure/events/: __init__.py  events_module.py  factory.py
src/infrastructure/jobs/: __init__.py  factory.py  jobs_module.py
src/infrastructure/logging/: __init__.py  factory.py  logging_module.py
src/infrastructure/notification/: __init__.py  factory.py  notification_module.py
src/infrastructure/outbox/: __init__.py  processor.py  publisher.py
src/infrastructure/storage/: __init__.py  factory.py  storage_module.py
src/presentation/: __init__.py
src/presentation/http/: __init__.py
src/shared/: __init__.py
tests/: __init__.py  conftest.py
tests/e2e/: test_health_check.py  test_user_api.py
tests/integration/: test_unit_of_work.py  test_user_repository.py
(+209 files in other folders)
