[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "clean-architecture"
version = "1.0.0"
description = "A Clean Architecture application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
# FastAPI and server
fastapi = "^0.109.0"
uvicorn = { version = "^0.27.0", extras = ["standard"] }
# Pydantic
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
email-validator = "^2.1.0"
# Database
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
# Security
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-multipart = "^0.0.6"
# Logging
python-json-logger = "^2.0.7"
structlog = "^25.5.0"
# Cache
redis = "^5.0.1"
# Storage (S3)
aiobotocore = "^2.21.1"
# Dependency Injection
dependency-injector = "^4.48.3"
# Messaging
aio-pika = "^9.5.8"
# Keycloak
python-keycloak = "^5.8.1"
# Docs
markdownify = "^1.2.2"
requests = "^2.32.5"
# Utils
aiofiles = "^25.1.0"
celery = "^5.6.2"
# Notification (Novu)
# novu = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
ruff = "^0.1.0"
# Type stubs
types-aiobotocore = { version = "^2.21.1", extras = ["s3"] }

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["shared", "users", "auth", "products", "orders", "jobs"]
src_paths = ["src"]
skip = [".venv", "alembic"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = false
mypy_path = "src"
ignore_missing_imports = true
no_implicit_optional = true
strict_optional = true
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "novu.*",
    "aiofiles.*",
    "aiobotocore.*",
    "types_aiobotocore_s3.*",
    "dependency_injector.*",
    "infrastructure.*",
    "bootstrapper.*",
    "presentation.*",
    "config.*",
    "shared.presentation.*",
    "contexts.user_management.application.event_handlers.*",
]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
